--- a/warmisitAI/src/main/resources/templates/lista-incidencias-reportadas.html
+++ b/warmisitAI/src/main/resources/templates/lista-incidencias-reportadas.html
@@ -1,38 +1,580 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Lista de Incidencias Reportadas</title>
-</head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./style/listaIncidenciasReportados.css">
+      <title>Lista de Incidentes Reportados</title>
+      <style>
+		  @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
+*{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+}
+
+::selection {
+      background-color: transparent; 
+}
+
+:root{
+      --green: #6db23e;
+      --bg: #1b1e22;
+      --container: #262a2d;
+      --white: #fffefe;
+}
+
+body{
+      background-color: var(--bg);
+      overflow: hidden;
+}
+
+ul{
+      list-style: none;
+}
+
+a{
+      text-decoration: none;
+}
+
+.admin-dashboard{
+      position: relative;
+      display: flex;
+}
+
+.ds-left-menu{
+      background: var(--container);
+      height: 100vh;
+      color: #fff;
+      width: 85px;
+      position: relative;
+      padding-left: 13px;  
+      transition: 0.5s;
+}
+
+.ds-left-menu.active{
+      width: 300px;
+      padding: 0px 0px 0px 20px;
+}
+  
+.btn-menu{
+      position: absolute;
+      background: var(--green);
+      color: #fff;
+      width: 35px;
+      height: 35px;
+      line-height: 35px;
+      text-align: center;
+      cursor: pointer;
+      border-radius: 50%;
+      border: none;
+      top: 110px;
+      right: -16px;
+      font-size: 16px;
+      z-index: 100;
+      transition: 0.8s;
+}
+
+.btn-menu.rotate{
+      transform: rotate(180deg);
+      transition: 0.8s;
+}
+
+.btn-menu ion-icon{
+      width: 70%;
+      height: 70%;
+      position: relative;
+      border-radius: 50%;
+      top: 5px;
+}
+  
+.ds-menu{
+      width: 100%;
+      overflow-x: scroll;
+      height: 100%;
+      padding-bottom: 150px;
+      padding-top: 50px;
+}
+  
+.ds-menu ul li{
+      position: relative;
+}
+
+.ds-menu ul li.active{
+      background-color: var(--bg);
+      border-top-left-radius: 50px;
+      border-bottom-left-radius: 50px;
+}
+
+.ds-menu ul li.active::before{
+      content: '';
+      position: absolute;
+      top: -20px;
+      right: 0;
+      width: 20px;
+      height: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 5px 5px 0px 5px var(--bg);
+      background-color: transparent;
+}
+
+.ds-menu ul li.active::after{
+      content: '';
+      position: absolute;
+      bottom: -20px;
+      right: 0;
+      width: 20px;
+      height: 20px;
+      border-top-right-radius: 20px;
+      box-shadow: 5px -2px 0px 2px var(--bg);
+      background-color: transparent;
+      
+}
+  
+.ds-menu ul li a{
+      cursor: pointer;
+      background: transparent;
+      display: flex;
+      white-space: nowrap;
+      text-decoration: none;
+}
+  
+.ds-menu ul li a .icon {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 60px;
+      padding-left: 1px;
+      height: 65px;
+      font-size: 1.5em;
+      color: var(--white);
+      transition: 0.5s;
+}
+
+.ds-menu ul li a .text{
+      position: relative;
+      height: 65px;
+      display: flex;
+      align-items: center;
+      font-size: 1em;
+      color: var(--white);
+      padding-left: 20px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      transition: 0.5s;
+}
+
+.ds-menu ul li.active a .icon {
+      color: var(--white);
+}
+
+.ds-menu ul li.active a .text{
+      color: var(--green);
+}
+  
+.ds-menu ul li:hover a .icon,
+.ds-menu ul li:hover a .text{
+      color: #6db23e;
+}
+
+.ds-menu ul li.active a .icon::before{
+      content: '';
+      position: absolute;
+      inset: 5px;
+      width: 55px;
+      background-color: var(--green);
+      border-radius: 50%;
+      transition: 0.5s;
+}
+
+.ds-menu ul li:hover.active a .icon::before{
+      background-color: var(--white);
+}
+
+.ds-perfil{
+      transition: 0.5s;
+      display: flex;
+      align-items: center;
+      padding: 20px 2px 40px 5px;
+}
+  
+.ds-perfil .foto{
+      position: relative;
+      width: 50px;
+      height: 50px;
+      transition: 0.5s;
+      border-radius: 50%;
+      border: 3px solid #525252;
+}
+  
+.ds-perfil .foto::after{
+      content: '';
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: green;
+      bottom: 0;
+      right: 0;
+      border-radius: 50%;
+}
+  
+.ds-perfil .foto ion-icon{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+}
+  
+.ds-perfil .info-perfil{
+      transition: 0.5s;
+      display: none;
+}
+
+.ds-perfil .info-perfil.hidden{
+      transition: 1s ;
+      display: flex;
+      padding-left: 20px;
+}
+  
+.ds-perfil .info-perfil.hidden span{
+      font-size: 12px;
+      color: #bcbcbd;
+}
+  
+  .ds-perfil .info-perfil h3{
+      font-size: 1.2em;
+      text-transform: uppercase;
+      letter-spacing: 0.03em;
+      font-weight: 500;
+      margin-top: -5px;
+  }
+  
+  .sign-off{
+      position: absolute;
+      bottom: 0;
+      width: 80%;
+      display: flex;
+      padding-bottom: 35px;
+      overflow: hidden;
+  }
+
+  .sign-off a{
+      background: transparent;
+      display: flex;
+      white-space: nowrap;
+      color: var(--white);
+      margin-top: 100px;
+  }
+
+.sign-off a:hover .icon,
+.sign-off a:hover .text
+{
+      color: var(--green);
+      transition: 0.5s;
+}
+
+.sign-off a .icon{
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 60px;
+      height: 50px;
+      font-size: 1.6em;
+      color: var(--white);
+      transition: 0.5s;
+}
+  
+.sign-off a .text{
+      position: relative;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      font-size: 1em;
+      color: var(--white);
+      padding-left: 20px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      transition: 0.5s;
+}
+
+.line{
+      background-color: #606064;
+      position: relative;
+      width: 80%;
+      top: -25px;
+      height: 1px;
+}
+
+.line.short{
+      background-color: #606064;
+      position: relative;
+      width: 100%;
+      top: -25px;
+      height: 1px;
+}
+
+.line-two{
+      width: 70%;
+      height: 1px;
+      background-color: #606064;
+      position: absolute;
+      bottom: 100px;
+}
+
+.line-two.short{
+      width: 85%;
+      height: 1px;
+      background-color: #606064;
+      position: absolute;
+      bottom: 100px;
+}
+  
+/*===================================
+    ESTILOS PANEL RIGHT
+===================================*/
+.ds-panel{
+    width: calc(100%);
+    padding: 20px 30px 20px 40px;
+    background: var(--bg);
+}
+
+.ds-panel .panel-header{
+    width: 100%;
+    background: var(--container);
+    padding: 8px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.ds-panel .panel-header .icono{
+    width: 50px;
+    inset: 10;
+    border-radius: 10px;
+    text-align: center;
+    padding: 6px 0px 0px 0px;
+    font-size: 1.7em;
+    margin-right: 20px;
+    color: var(--white);
+    background: var(--green);
+}
+
+.ds-panel .panel-header h2{
+    font-size: 1.7em;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    color: var(--white);
+}
+
+/****************************/
+.table-container{
+      margin-top: 2rem;
+}
+
+.table-container h2{
+      margin-bottom: 0.8rem;
+      color: var(--green);
+}
+
+.table-container table{
+      background: var(--container);
+      width: 100%;
+      border-radius: 2rem;
+      padding: 1rem;
+      text-align: center;
+      transition: all 300ms ease;
+}
+
+table thead th{
+      color: #6db23e;
+}
+
+table tbody td{
+      height: 2.8rem;
+      color: #f5f3f3;
+}
+
+table tbody tr .primary a{
+      text-decoration: none;
+      text-transform: uppercase;
+      font-weight: 500;
+      color: var(--green);
+}
+
+table tbody tr .primary a:hover{
+      text-decoration: underline;  
+}
+	  </style>
+</head> 
 <body>
+      <div class="admin-dashboard">
 
-<h2>Lista de Incidencias Reportadas</h2>
+            <div class="ds-left-menu">
+    
+                <button class="btn-menu">
+                    <ion-icon name="chevron-back-circle"></ion-icon>
+                </button>
+    
+                <div class="ds-perfil">
+                    <div class="foto">
+                        <ion-icon name="person-circle"></ion-icon>
+                    </div>
+                    <div class="info-perfil">
+                        <h3>User</h3>
+                    </div>
+                </div>
+    
+                <div class="line"></div>
 
-<table border="1">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Fecha</th>
-            <th>Hora</th>
-            <th>Nombre</th>
-            <th>Descripción</th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr th:each="incidencia : ${incidenciasReportadas}">
-            <td th:text="${incidencia.id}"></td>
-            <td th:text="${#temporals.format(incidencia.fecha, 'yyyy-MM-dd')}"></td>
-            <td th:text="${#temporals.format(incidencia.hora, 'HH:mm:ss')}"></td>
-            <td th:text="${incidencia.nombre}"></td>
-            <td th:text="${incidencia.descripcion}"></td>
-            <td>
-				<button>Editar</button>
-			</td>
-        </tr>
-    </tbody>
-</table>
+                <div class="ds-menu">                    
+                    <ul div="menu-list">
+                        <li class="active">
+                            <a href="#">
+                                <div class="icon">
+                                    <ion-icon name="home"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Home</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon">
+                                    <ion-icon name="construct-outline"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Productos</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon">
+                                    <ion-icon name="cafe-outline"></ion-icon>
+                                </div>                           
+                                <div class="text">
+                                    <span>Ofertas</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon">
+                                    <ion-icon name="cart-outline"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Ordenes</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon">
+                                    <ion-icon name="newspaper-outline"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Reportes</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="icon">
+                                    <ion-icon name="settings-outline"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Ajustes</span>
+                                </div>
+                            </a>
+                        </li>    
+                    </ul> 
+                </div>
+    
+                <div class="line-two"></div>
 
+                <div class="sign-off">
+                    <a href="#" class="btn-sign-off">
+                        <div class="icon">
+                            <ion-icon name="log-out-outline"></ion-icon>
+                        </div>
+                        <div class="text">
+                            <span>Logout</span>
+                        </div>
+                    </a>
+                </div>
+                 
+            </div>
+
+            <div class="ds-panel">
+           
+                <div class="panel-header">
+                    <div class="icono">
+                        <ion-icon name="folder-open-outline"></ion-icon>
+                    </div>
+                    <h2>Lista de Incidentes Reportados</h2>
+                </div>
+
+               <div class="table-container">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Fecha</th>
+                                <th>Hora</th>
+                                <th>Nombre</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="incidencia : ${incidenciasReportadas}">
+					            <td th:text="${#temporals.format(incidencia.fecha, 'yyyy-MM-dd')}"></td>
+					            <td th:text="${#temporals.format(incidencia.hora, 'HH:mm:ss')}"></td>
+					            <td th:text="${incidencia.nombre}"></td>
+					            <td class="primary">
+									<a href="#">Evaluar</a>
+								</td>
+								<td class="primary"> 
+									<a href="#">Ver Detalle</a>
+								</td>
+					        </tr>
+                        </tbody>
+                    </table>  
+            </div>
+    
+        </div>
+    
 </body>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script>
+    let btnmenu = document.querySelector('.btn-menu');
+    let dsleftmenu = document.querySelector('.ds-left-menu');
+    let line = document.querySelector('.line');
+    let linetwo = document.querySelector('.line-two');
+    let infoperfil = document.querySelector('.info-perfil');
+
+    btnmenu.onclick = function(){
+        btnmenu.classList.toggle('rotate');
+        dsleftmenu.classList.toggle('active');
+        line.classList.toggle('short');
+        linetwo.classList.toggle('short');
+        infoperfil.classList.toggle('hidden');
+    }
+
+    let menulist = document.querySelectorAll('.ds-menu ul li');
+    function activeLink(){
+        menulist.forEach((item)=>
+        item.classList.remove('active'));
+        this.classList.add('active')
+    }
+    menulist.forEach((item)=>
+    item.addEventListener('click', activeLink));
+</script>
 </html>
 
+<!--<td th:text="${incidencia.descripcion}"></td>-->
