--- a/warmisitAI/src/main/resources/templates/tecnicos-lista.html
+++ b/warmisitAI/src/main/resources/templates/tecnicos-lista.html
@@ -29,102 +29,84 @@
 <body>
 	<div class="admin-dashboard">
 
-		<div class="ds-left-menu">
+		 <div class="ds-left-menu">
+    
+                <button class="btn-menu">
+                    <ion-icon name="chevron-back-circle"></ion-icon>
+                </button>
+    
+                <div class="ds-perfil">
+                    <div class="foto">
+                        <ion-icon name="person-circle"></ion-icon>
+                    </div>
+                    <div class="info-perfil">
+                        <h3>[[${user.getFullname()}]]</h3>
+                    </div>
+                </div>
+    
+                <div class="line"></div>
 
-			<button class="btn-menu">
-				<ion-icon name="chevron-back-circle"></ion-icon>
-			</button>
+                <div class="ds-menu">                    
+                    <ul div="menu-list">
+                        <li class="active">
+                            <a href="/admin-page">
+                                <div class="icon">
+                                    <ion-icon name="home"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Home</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/listaIncidenciasReportadas">
+                                <div class="icon">
+                                    <ion-icon name="construct-outline"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Incidentes R.</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/listadoDeIncidenciasEvaluadas">
+                                <div class="icon">
+                                    <ion-icon name="folder-open-outline"></ion-icon>
+                                </div>                           
+                                <div class="text">
+                                    <span>Incidentes E.</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/listaDeTecnicos">
+                                <div class="icon">
+                                    <ion-icon name="hammer-outline"></ion-icon>
+                                </div>
+                                <div class="text">
+                                    <span>Tecnicos</span>
+                                </div>
+                            </a>
+                        </li>   
+                    </ul> 
+                </div>
+    
+                <div class="line-two"></div>
 
-			<div class="ds-perfil">
-				<div class="foto">
-					<ion-icon name="person-circle"></ion-icon>
-				</div>
-				<div class="info-perfil">
-					<h3>User</h3>
-				</div>
-			</div>
-
-			<div class="line"></div>
-
-			<div class="ds-menu">
-				<ul div="menu-list">
-					<li class="active">
-						<a href="#">
-							<div class="icon">
-								<ion-icon name="home"></ion-icon>
-							</div>
-							<div class="text">
-								<span>Home</span>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="icon">
-								<ion-icon name="construct-outline"></ion-icon>
-							</div>
-							<div class="text">
-								<span>Productos</span>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="icon">
-								<ion-icon name="cafe-outline"></ion-icon>
-							</div>
-							<div class="text">
-								<span>Ofertas</span>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="icon">
-								<ion-icon name="cart-outline"></ion-icon>
-							</div>
-							<div class="text">
-								<span>Ordenes</span>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="icon">
-								<ion-icon name="newspaper-outline"></ion-icon>
-							</div>
-							<div class="text">
-								<span>Reportes</span>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="icon">
-								<ion-icon name="settings-outline"></ion-icon>
-							</div>
-							<div class="text">
-								<span>Ajustes</span>
-							</div>
-						</a>
-					</li>
-				</ul>
-			</div>
-
-			<div class="line-two"></div>
-
-			<div class="sign-off">
-				<a href="#" class="btn-sign-off">
-					<div class="icon">
-						<ion-icon name="log-out-outline"></ion-icon>
-					</div>
-					<div class="text">
-						<span>Logout</span>
-					</div>
-				</a>
-			</div>
-
-		</div>
+                <div class="sign-off">
+					<span sec:authorize="isAuthenticated">
+					   <a th:href="@{/logout}" class="btn-sign-off">
+						   <div class="icon">
+						       <ion-icon name="log-out-outline"></ion-icon>
+						   </div>
+						   <div class="text">
+						      <span>Logout</span>
+						   </div>
+					   </a>
+					</span>
+                </div>
+                 
+            </div>
 
 		<div class="ds-panel">
 
